infra/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
    - "*"
  gateways:
    - hello
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: hello
            port:
              number: 8080
